# DTU-Scara-Robot

./: .buildinfo  .gitignore  DOCS_README.html  LICENSE  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: DOCS_README.doctree  environment.pickle  index.doctree
Assembly/: README.md
ROS2/: README.md
ROS2/ros2_scara_ws/src/bioscara_rviz_plugin/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
ROS2/ros2_scara_ws/src/bioscara_rviz_plugin/include/bioscara_rviz_plugin/: bioscara_panel.hpp
ROS2/ros2_scara_ws/src/bioscara_rviz_plugin/launch/: display.rviz
ROS2/ros2_scara_ws/src/bioscara_rviz_plugin/src/: bioscara_panel.cpp
ROS2/ros2_scara_ws/src/bioscara_rviz_plugin/src/ui/: bioscara_rviz_plugin_frame.ui
ROS2/ros2_scara_ws/src/dalsa_bioscara/bioscara_controllers/homing_controller/: CMakeLists.txt  homing_controller_plugin.xml  package.xml
ROS2/ros2_scara_ws/src/dalsa_bioscara/bioscara_controllers/homing_controller/include/homing_controller/: homing_controller.hpp
ROS2/ros2_scara_ws/src/dalsa_bioscara/bioscara_controllers/homing_controller/src/: homing_controller.cpp  homing_controller_parameters.yaml
ROS2/ros2_scara_ws/src/dalsa_bioscara/bioscara_hardware_driver/: CMakeLists.txt  package.xml
ROS2/ros2_scara_ws/src/dalsa_bioscara/bioscara_hardware_driver/include/bioscara_hardware_driver/: common.h  mBaseGripper.h  mBaseJoint.h  mGripper.h  mJoint.h  mJoint.hpp  mJointCom.h  mMockGripper.h  mMockJoint.h  uErr.h  uI2C.h  uPWM.h  uTransmission.h
ROS2/ros2_scara_ws/src/dalsa_bioscara/bioscara_hardware_driver/src/: joint_comm_node.cpp  mBaseGripper.cpp  mBaseJoint.cpp  mGripper.cpp  mJoint.cpp  mJointCom.cpp  mMockGripper.cpp  mMockJoint.cpp  timing_test.cpp  uErr.cpp  uI2C.cpp
ROS2/ros2_scara_ws/src/dalsa_bioscara/bioscara_hardware_interfaces/: CMakeLists.txt  bioscara_hardware_interfaces.xml  package.xml
ROS2/ros2_scara_ws/src/dalsa_bioscara/bioscara_hardware_interfaces/include/bioscara_hardware_interfaces/: arm_hardware.hpp  gripper_hardware.hpp
ROS2/ros2_scara_ws/src/dalsa_bioscara/bioscara_hardware_interfaces/src/: arm_hardware.cpp  gripper_hardware.cpp
ROS2/ros2_scara_ws/src/dalsa_bioscara/dalsa_bioscara/: CMakeLists.txt  package.xml
ROS2/ros2_scara_ws/src/dalsa_bioscara_arm/bioscara_arm_hardware_interface/: package.xml
ROS2/ros2_scara_ws/src/dalsa_bioscara_arm/bioscara_arm_hardware_interface/include/bioscara_arm_hardware_interface/: arm_hardware.hpp
ROS2/ros2_scara_ws/src/dalsa_bioscara_arm/bioscara_arm_hardware_interface/src/: arm_hardware.cpp
ROS2/ros2_scara_ws/src/dalsa_grippers/bioscara_gripper_descriptions/: CMakeLists.txt  package.xml
ROS2/ros2_scara_ws/src/dalsa_grippers/bioscara_gripper_descriptions/config/: bioscara_gripper_128_parameters.yaml
ROS2/ros2_scara_ws/src/dalsa_grippers/bioscara_gripper_descriptions/launch/: view.launch.py
ROS2/ros2_scara_ws/src/dalsa_grippers/bioscara_gripper_descriptions/meshes/: right_jaw.stl
ROS2/ros2_scara_ws/src/dalsa_grippers/bioscara_gripper_descriptions/rviz/: display.rviz
ROS2/ros2_scara_ws/src/dalsa_grippers/bioscara_gripper_descriptions/urdf/: bioscara_gripper_128.ros2_control.xacro  bioscara_gripper_128.urdf.xacro  bioscara_gripper_128.xacro  materials.xacro  scene copy.urdf  scene.xacro
ROS2/ros2_scara_ws/src/dalsa_grippers/bioscara_gripper_hardware_driver/: CMakeLists.txt  package.xml
ROS2/ros2_scara_ws/src/dalsa_grippers/bioscara_gripper_hardware_driver/include/bioscara_gripper_hardware_driver/: mBaseGripper.h  mGripper.h  mMockGripper.h
ROS2/ros2_scara_ws/src/dalsa_grippers/bioscara_gripper_hardware_driver/src/: mBaseGripper.cpp  mGripper.cpp  mMockGripper.cpp
ROS2/ros2_scara_ws/src/dalsa_grippers/dalsa_grippers/: CMakeLists.txt  package.xml
ROS2/ros2_scara_ws/src/joint_communication/: CMakeLists.txt  package.xml
ROS2/ros2_scara_ws/src/joint_communication/include/joint_communication/: common.h  mGripper.h  mJoint.h  mJoint.hpp  mJointCom.h  mPWM.h  uI2C.h  uPWM.h
ROS2/ros2_scara_ws/src/joint_communication/src/: joint_comm_node.cpp  mGripper.cpp  mJoint.cpp  mJointCom.cpp  uI2C.cpp
ROS2/ros2_scara_ws/src/scene_bringup/: CMakeLists.txt  package.xml
ROS2/ros2_scara_ws/src/scene_bringup/launch/: bioscara_arm_gripper128.launch.py
ROS2/ros2_scara_ws/src/scene_descriptions/: CMakeLists.txt  package.xml
ROS2/ros2_scara_ws/src/scene_descriptions/launch/: view.launch.py
ROS2/ros2_scara_ws/src/scene_descriptions/rviz/: display.rviz
ROS2/ros2_scara_ws/src/scene_descriptions/urdf/: robot.xacro  scene.xacro  test.urdf
ROS2/ros2_scara_ws/src/system_test_packages/max_accel_test/: CMakeLists.txt  package.xml
ROS2/ros2_scara_ws/src/system_test_packages/max_accel_test/src/: main.cpp
ROS2/ros2_scara_ws/src/system_test_packages/system_test_packages/: package.xml
Raspberry/: FK.py  FK_UI.py  IK.py  Jogging_cart_UI.py  README.md  coords.txt  gcode.txt  gcode_track.py  gui.py  homing.py  motors_off.py  near_mode.py  network-config  pos_rec.txt  send_FK_UI.py  send_IK.py  send_IK_UI.py  send_gcode.py  send_gcode_file.py  send_move.py  user-data
_sources/: DOCS_README.md.txt
code/: index.html
dev_machine/: README.md
docs/: DOCS_README.md  Doxyfile  README.md  conf.py  index.rst  requirements-docs.txt
lib/ros2_ws/src/dalsa_bioscara_arm/dalsa_bioscara_arm/: package.xml
lib/ros2_ws/src/dalsa_bioscara_grippers/bioscara_gripper_hardware_interface/: CMakeLists.txt
lib/ros2_ws/src/dalsa_bioscara_grippers/bioscara_gripper_hardware_interface/include/bioscara_gripper_hardware_interface/: gripper_hardware.hpp
lib/ros2_ws/src/moveit_configurations/moveit_configurations/: package.xml
lib/ros2_ws/src/moveit_motion_plans/: CMakeLists.txt  package.xml
lib/ros2_ws/src/moveit_motion_plans/scripts/: IAmNotARobot.py  PickPlace.py  single_plate_on_table.scene
lib/ros2_ws/src/moveit_motion_plans/src/: pilz_sequence.cpp
lib/ros2_ws/src/system_test_packages/gripper_manual_control/: CMakeLists.txt  README.md
test/: README.md  accel_test_10000000_200000.csv  accel_test_10000_200000.csv  requirements.txt  thesis_style.mplstyle
(+939 files in other folders)
