<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bioscara_rviz_plugin</name>
  <version>0.0.0</version>
  <description>RViz Panel for Bioscara control</description>
  <maintainer email="s.storz01@gmail.com">Sebastian Storz</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>controller_manager_msgs</depend>
  <depend>control_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
