<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_motion_plans</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s.storz01@gmail.com">sbstorz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_task_constructor_capabilities</exec_depend>
  <exec_depend>moveit_task_constructor_visualization</exec_depend>
  <exec_depend>bioscara_arm_gripper_128_moveit_config</exec_depend>
  <exec_depend>py_binding_tools</exec_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
