<?xml version="1.0"?>
<package format="3">
  <name>dalsa_bioscara</name>
  <version>0.0.0</version>
  <description>Metapackage for the DALSA Bioscara control packages</description>

  <author email="s.storz01@gmail.com">Sebastian Storz</author>
  <maintainer email="s.storz01@gmail.com">Sebastian Storz</maintainer>



  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <exec_depend>ros2_control_demo_example_1</exec_depend>
  <exec_depend>ros2_control_demo_example_2</exec_depend>
  <exec_depend>ros2_control_demo_example_3</exec_depend>
  <exec_depend>ros2_control_demo_example_4</exec_depend>
  <exec_depend>ros2_control_demo_example_5</exec_depend>
  <exec_depend>ros2_control_demo_example_6</exec_depend>
  <exec_depend>ros2_control_demo_example_7</exec_depend>
  <exec_depend>ros2_control_demo_example_8</exec_depend>
  <exec_depend>ros2_control_demo_example_9</exec_depend>
  <exec_depend>ros2_control_demo_example_10</exec_depend>
  <exec_depend>ros2_control_demo_example_11</exec_depend>
  <exec_depend>ros2_control_demo_example_12</exec_depend>
  <exec_depend>ros2_control_demo_example_13</exec_depend>
  <exec_depend>ros2_control_demo_example_14</exec_depend>
  <exec_depend>ros2_control_demo_example_15</exec_depend>
  <exec_depend>ros2_control_demo_example_16</exec_depend>
  <exec_depend>ros2_control_demo_example_17</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
