<?xml version="1.0"?>
<package format="3">
  <name>dalsa_bioscara</name>
  <version>0.0.0</version>
  <description>Metapackage for the DALSA Bioscara control packages</description>

  <maintainer email="s.storz01@gmail.com">Sebastian Storz</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bioscara_bringup</exec_depend>
  <exec_depend>bioscara_controllers</exec_depend>
  <exec_depend>bioscara_description</exec_depend>
  <exec_depend>bioscara_hardware_driver</exec_depend>
  <exec_depend>bioscara_hardware_interfaces</exec_depend>
  <depend>python3-vcstool</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
