<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bioscara_arm_hardware_interface</name>
  <version>0.0.0</version>
  <description>Hardware Interface package for the bioscara robot for ros2_control</description>
  <maintainer email="s.storz01@gmail.com">sbstorz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>bioscara_arm_hardware_driver</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>