<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bioscara_gripper_hardware_driver</name>
  <version>0.0.0</version>
  <description>This package is a communication library for the bioscara gripper hardware as a PWM signal.</description>
  <maintainer email="s.storz01@gmail.com">Sebastian Storz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Depends on arm driver since it has some error types and macros defined -->
  <depend>bioscara_arm_hardware_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
