<?xml version="1.0"?>
<package format="3">
  <name>dalsa_grippers</name>
  <version>0.0.0</version>
  <description>Metapackage for the DALSA gripper packages</description>

  <author email="s.storz01@gmail.com">Sebastian Storz</author>
  <maintainer email="s.storz01@gmail.com">Sebastian Storz</maintainer>



  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bioscara_gripper_128</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
