<?xml version="1.0"?>
<package format="3">
  <name>moveit_configurations</name>
  <version>0.0.0</version>
  <description>Metapackage containing all packages concerning trajectory generation. </description>

  <maintainer email="s.storz01@gmail.com">sbstorz</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
